--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "c3": "^0.4.24",
         "concurrently": "^9.0.1",
         "d3": "^7.9.0",
+        "datatables.net-dt": "^2.3.4",
         "laravel-vite-plugin": "^1.0",
         "tailwindcss": "^4.0.7",
         "vite": "^6.0"
