--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
         "@tailwindcss/vite": "^4.0.7",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
+        "bootstrap-icons": "^1.13.1",
         "c3": "^0.4.24",
         "concurrently": "^9.0.1",
         "d3": "^7.9.0",
-        "datatables.net-dt": "^2.3.4",
+        "datatables.net-bs5": "^2.3.4",
+        "datatables.net-buttons-bs5": "^3.2.5",
+        "datatables.net-select-bs5": "^3.1.0",
         "laravel-vite-plugin": "^1.0",
         "tailwindcss": "^4.0.7",
         "vite": "^6.0"
